# CrosshairZ

./: .dockerignore  .gitignore  App.xaml  App.xaml.cs  Cargo.toml  CrosshairZ.csproj  CrosshairZ.sln  Dockerfile  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  README.md  fly.toml
Assets/: WebCrosshair.html
CrosshairzApp/: App.xaml  App.xaml.cs  CrosshairZ.csproj  CrosshairZ_SideloadKey.pfx  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
CrosshairzApp/Interop/: Protocol.cs  RustInterop.cs
CrosshairzApp/Properties/: AssemblyInfo.cs
CrosshairzApp/Services/: CommunityService.cs  ProfileStore.cs  WidgetController.cs
Properties/: AssemblyInfo.cs
crates/crosshair-core/: Cargo.toml
crates/crosshair-core/src/: color.rs  draw.rs  lib.rs  model.rs  share_code.rs  validation.rs
crates/crosshair-ffi/: Cargo.toml
crates/crosshair-ffi/src/: lib.rs
crates/crosshair-ipc/: Cargo.toml
crates/crosshair-ipc/src/: lib.rs  protocol.rs
crates/crosshair-server/: Cargo.toml
crates/crosshair-server/src/: main.rs
